<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/Summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:layout_gravity="center"
            android:textSize="60sp"
            android:textDirection="rtl"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="2"
        android:background="@android:color/darker_gray">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <Button
                android:id="@+id/button_7"
                android:onClick="onClick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_7"
                android:layout_weight="1"
                android:textSize="32sp"/>

            <Button
                android:id="@+id/button_4"
                android:onClick="onClick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_4"
                android:textSize="32sp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button_1"
                android:onClick="onClick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_1"
                android:textSize="32sp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button_dot"
                android:onClick="onClick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="."
                android:textSize="32sp"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <Button
                android:id="@+id/button_8"
                android:onClick="onClick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_8"
                android:layout_weight="1"
                android:textSize="32sp"/>

            <Button
                android:id="@+id/button_5"
                android:onClick="onClick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_5"
                android:textSize="32sp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button_2"
                android:onClick="onClick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_2"
                android:textSize="32sp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button_0"
                android:onClick="onClick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textSize="32sp"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <Button
                android:id="@+id/button_9"
                android:onClick="onClick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_9"
                android:layout_weight="1"
                android:textSize="32sp"/>

            <Button
                android:id="@+id/button_6"
                android:onClick="onClick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_6"
                android:textSize="32sp"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/button_3"
                android:onClick="onClick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_3"
                android:textSize="32sp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button_result"
                android:onClick="onResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="="
                android:textSize="32sp"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <Button
                android:id="@+id/button_delete"
                android:onClick="onErase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/del"
                android:layout_weight="1"
                android:textSize="18sp"/>

            <Button
                android:id="@+id/button_divide"
                android:onClick="onAction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="÷"
                android:textSize="24sp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button_multiply"
                android:onClick="onAction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="×"
                android:textSize="24sp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button_subtract"
                android:onClick="onAction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="-"
                android:textSize="24sp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button_product"
                android:onClick="onAction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="+"
                android:textSize="24sp"
                android:layout_weight="1" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>